# Multithreading_C_Language

./: CMakeLists.txt  Makefile  README.md  philo  philo_bonus
bonus_part/srcs/: actions.c  check_functions.c  exception.c  init.c  itoa_exception.c  lifecycle_utils.c  lifecycle_utils_1.c  main.c  utils_bonus.c
includes/: bonus_header.h  errors.h  header.h  libft.h  main_header.h  tmp_header.h  tmp_header_old.h
libft/: Makefile
libft/includes/: libft.h
libft/srcs/: ft_atoi.c  ft_calloc.c  ft_itoa.c  ft_strlen.c  ft_strncmp.c
main_part/srcs/: actions.c  check_functions.c  cycle_functions.c  lib_functions.c  lifecycle_utils.c  lifecycle_utils_2.c  main.c
new_main_part/: Makefile
new_main_part/srcs/: actions.c  check_functions.c  cycle_functions.c  exception.c  lifecycle_utils.c  lifecycle_utils_1.c  lifecycle_utils_2.c  loop_live.c  main.c  start_game.c
srcs/: actions.c  check_functions.c  lifecycle_utils.c  main.c  philo_obj.c  philo_tools.c
